--- a/digital_events_repository/web/SI/administrador/usuarios/index.xhtml
+++ b/digital_events_repository/web/SI/administrador/usuarios/index.xhtml
@@ -10,7 +10,10 @@
                 xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="content">
-        <h:form> 
+        <h:form>
+            <h:panelGroup id="mesagescsv">
+                <h:messages showDetail="true" layout="table" style="display: block; padding: 5px; border-radius:5px; box-shadow: 0px 0px 10px; border-bottom: 10px solid black" warnStyle="color:yellow" infoStyle="color:blue" errorStyle="color:red"/>
+            </h:panelGroup>
             <h:panelGroup>
                 <h:messages showDetail="true" styleClass="alert" style="list-style: none; padding: 0px; display: block" infoClass="alert-success" errorClass="alert-danger"/>
             </h:panelGroup>
@@ -20,6 +23,21 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
+                        <h:form prependId="false" enctype="multiPart/form-data">
+                            <div style="text-align: left; padding-left: 13px" class="btn-light">
+                                <div class="form-group">
+                                    <label for="fileS" class="subir">Cargar CSV <i  style="font-size: 15px" class="fa fa-upload"></i></label>
+                                    <h:inputFile id="fileS"  value="#{cargaUsuariosCSVController.multipart}"> </h:inputFile>
+                                    <div id="info"></div>
+                                </div>
+                                <div class="form-group">
+                                    <h:commandLink style="font-size: 12px" class="btn btn-primary" value="Cargar" action="#{cargaUsuariosCSVController.fileUploadCsv()}">
+                                        <f:ajax render="mesagescsv" execute="fileS"/>
+                                        <i class="fa fa-save"></i>
+                                    </h:commandLink>
+                                </div>
+                            </div>
+                        </h:form>
                         <div class="card">
                             <h:form>
                                 <div class="card-header card-header-success colorc">
