--- a/digital_events_repository/web/SI/administrador/usuarios/index.xhtml
+++ b/digital_events_repository/web/SI/administrador/usuarios/index.xhtml
@@ -48,7 +48,7 @@
 
                                         </div>
                                         <div class="col-6">                                          
-                                            <h:commandLink class="card-category btn btn-danger btn-flat m-b-30 m-t-30" action="#" value="PDF" >
+                                            <h:commandLink class="card-category btn btn-danger btn-flat m-b-30 m-t-30" action="#{reportesController.export()}" value="PDF" >
                                                 <i class="fas fa-file-pdf"></i>
                                             </h:commandLink>&nbsp;&nbsp;
                                             <h:commandLink class="card-category btn btn-primary btn-flat m-b-30 m-t-30" action="#" value="EXCEL">
