--- a/digital_events_repository/web/SI/administrador/ventas/indexVentas.xhtml
+++ b/digital_events_repository/web/SI/administrador/ventas/indexVentas.xhtml
@@ -10,14 +10,17 @@
                 xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="content">
-        
-        <h:form enctype="multipart/form-data">
-            <h:inputFile value="#{inventarioController.image}">
-                <f:passThroughAttribute name="accept" value="imaga/png"/>
-                <f:ajax event="change" listener="#{inventarioController.doUpload()}" execute="@form" render="@form"/>
-            </h:inputFile>
-        </h:form>
-        
+
+<!--        <h:form>
+            <p:dataTable value="#{inventarioController.materialList}" var="i">
+                <p:column>
+                    <p:graphicImage value="#{inventarioController.imageStream()}">
+                        <f:param name="id" value="#{i.id}" />
+                    </p:graphicImage>
+                </p:column>
+            </p:dataTable>
+        </h:form>-->
+
     </ui:define>
 
 
